update hyprland and sway config
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,10 +49,13 @@ env = QT_IM_MODULES,"wayland;fcitx"
 
 # Portals: Must be restarted to pick up the env vars
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-hyprland xdg-desktop-portal-gtk xdg-desktop-portal mpd
+exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-hyprland xdg-desktop-portal-gtk xdg-desktop-portal mpd pipewire wireplumber pipewire-pulse
 exec-once = sleep 1 && /usr/lib/xdg-desktop-portal-hyprland &
 exec-once = sleep 2 && /usr/lib/xdg-desktop-portal-gtk &
 exec-once = sleep 2 && /usr/lib/xdg-desktop-portal &
+exec-once =  pipewire
+exec-once =  wireplumber
+exec-once =  pipewire-pulse
 
 # Cleanup & Audio Stack
 # exec-once = gentoo-pipewire-launcher &
