--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,7 +1,8 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock
     before_sleep_cmd = loginctl lock-session
-    after_sleep_cmd = hyprctl dispatch dpms on
+    # Checks if Sway is running; if yes, uses swaymsg, otherwise defaults to hyprctl
+    after_sleep_cmd = if pgrep -x sway; then swaymsg "output * power on"; else hyprctl dispatch dpms on; fi
 }
 
 listener {
@@ -17,11 +18,12 @@ listener {
 
 listener {
     timeout = 330
-    on-timeout = hyprctl dispatch dpms off
-    on-resume = hyprctl dispatch dpms on
+    # Sway uses "output * power off", Hyprland uses "dispatch dpms off"
+    on-timeout = if pgrep -x sway; then swaymsg "output * power off"; else hyprctl dispatch dpms off; fi
+    on-resume = if pgrep -x sway; then swaymsg "output * power on"; else hyprctl dispatch dpms on; fi
 }
 
-listener {
-    timeout = 1800 # 30min
-    on-timeout = systemctl suspend
-}
+# listener {
+#     timeout = 1800 # 30min
+#     on-timeout = systemctl suspend
+# }
