waybar: move "niri/window" to modules-center
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -4,10 +4,11 @@
   "height": 24,
   "spacing": 0,
   "modules-left": [
-    "niri/workspaces",
+    "niri/workspaces"
+  ],
+  "modules-center": [
     "niri/window"
   ],
-  "modules-center": [],
   "modules-right": [
     "network",
     "pulseaudio",
