--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=WhiteSur-Dark-solid
 gtk-icon-theme-name=WhiteSur-dark
-gtk-font-name=Noto Sans 11
+gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=phinger-cursors-light
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
